--- a/index.html
+++ b/index.html
@@ -1,14 +1,80 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>HTML</title>
+  
+  <!-- HTML -->
+  
+
+  <!-- Custom Styles -->
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
-  <p>Welcome!</p>
+  <div class="div">
+    <div class="header">
+      <div class="header_link">
+        <div class="link_a">
+          <a href="">Образование</a>
+        </div>
+        <div class="link_a">
+          <a href="">Интересы</a>
+        </div>
+        <div class="link_a">
+          <a href="">Контакты</a>
+        </div>
+      </div>
+      <div class="header_logo">
+        <p>Хасанов Камиль</p>
+      </div>
+    </div>
+    <div class="main_info">
+     <div class="info">
+        <div class="profil">
+          <div class="name-img">
+            <p class="name">Хасанов Камиль Дамирович</p>
+            <img src="img/profil.jpg" alt="" class="profil_img">
+          </div>
+          <div class="info_me-wrapper"><p class="info_me"><span class="name">Хасáнов Камúль Дамúрович</span>(англ. <span class="name-en">Khasanov Kamil Damirovich</span>; род. <a href="https://ru.m.wikipedia.org/wiki/22_января">22 января</a> <a href="https://ru.m.wikipedia.org/wiki/2003_год">2003 года</a>, Нижнекамск, Россия) — российский студент, web-программист, художник, известный также под псевдонимом Báda, Meningióma</p></div>
+          <div class="about-me-wrapper">
+            <div class="about-name-title"><p>Хасанов Камиль</p></div>
+            <div class="about-name-title-en">
+              <a href="#">англ.</a>
+              <p>Khasanov Kamil</p>
+            </div>
+            <div class="about-img-profil"><img src="img/profil.jpg" alt=""></div>
+            <div class="abut-me-info">
+              <p class="name-b">Имя при рождении</p>
+              <p class="name-b-text">Хасанов Камиль Дамирович</p>
+            </div>
+            <div class="abut-me-info">
+              <p class="date-b">Дата рождения</p>
+              <p class="date-b-text">22 января 2003 (18 лет) </p>
+            </div>
+            <div class="abut-me-info">
+              <p class="locate-b">Место рождения</p>
+              <p class="locate-b-text"><a href="">Нижнекамск</a>, <a href="">Татарстан</a>, <a href="">Россия</a></p>
+            </div>
+            <div class="abut-me-info">
+              <p class="grag-b">Гражданство</p>
+              <div class="grag-b-text"><img src="img/russia.png" alt=""><a href="">Россия</a></div>
+            </div>
+            <div class="abut-me-info"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+     
+    <div class="footer">
+      <a href="#"><img src="" alt=""></a>
+      <a href="#"><img src="" alt=""></a>
+      <a href="#"><img src="" alt=""></a>
+    </div>
+  </div>
+  <script src="main.js"></script>
 </body>
-
 </html>
