--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="header_logo">
-        <p>Хасанов Камиль</p>
+        <p>ВикипедиЯ</p>
       </div>
     </div>
     <div class="main_info">
@@ -39,7 +39,7 @@
             <p class="name">Хасанов Камиль Дамирович</p>
             <img src="img/profil.jpg" alt="" class="profil_img">
           </div>
-          <div class="info_me-wrapper"><p class="info_me"><span class="name">Хасáнов Камúль Дамúрович</span>(англ. <span class="name-en">Khasanov Kamil Damirovich</span>; род. <a href="https://ru.m.wikipedia.org/wiki/22_января">22 января</a> <a href="https://ru.m.wikipedia.org/wiki/2003_год">2003 года</a>, Нижнекамск, Россия) — российский студент, web-программист, художник, известный также под псевдонимом Báda, Meningióma</p></div>
+          <div class="info_me-wrapper"><p class="info_me"><span class="name">Хасáнов Камúль Дамúрович</span>(англ. <span class="name-en">Khasanov Kamil Damirovich</span>; род. <a href="qя">22 января</a> <a href="https://ru.m.wikipedia.org/wiki/2003_год">2003 года</a>, Нижнекамск, Россия) — web-программист (front-end разработчик), российский студент, художник, известный также под псевдонимом Báda, Meningióma</p></div>
           <div class="about-me-wrapper">
             <div class="about-name-title"><p>Хасанов Камиль</p></div>
             <div class="about-name-title-en">
@@ -47,23 +47,22 @@
               <p>Khasanov Kamil</p>
             </div>
             <div class="about-img-profil"><img src="img/profil.jpg" alt=""></div>
-            <div class="abut-me-info">
+            <div class="about-me-info">
               <p class="name-b">Имя при рождении</p>
               <p class="name-b-text">Хасанов Камиль Дамирович</p>
             </div>
-            <div class="abut-me-info">
+            <div class="about-me-info">
               <p class="date-b">Дата рождения</p>
               <p class="date-b-text">22 января 2003 (18 лет) </p>
             </div>
-            <div class="abut-me-info">
+            <div class="about-me-info">
               <p class="locate-b">Место рождения</p>
-              <p class="locate-b-text"><a href="">Нижнекамск</a>, <a href="">Татарстан</a>, <a href="">Россия</a></p>
+              <p class="locate-b-text"><a href="https://ru.m.wikipedia.org/wiki/Нижнекамск">Нижнекамск</a>, <a href="https://ru.m.wikipedia.org/wiki/Татарстан">Татарстан</a>, <a href="https://ru.m.wikipedia.org/wiki/Россия">Россия</a></p>
             </div>
-            <div class="abut-me-info">
+            <div class="about-me-info">
               <p class="grag-b">Гражданство</p>
-              <div class="grag-b-text"><img src="img/russia.png" alt=""><a href="">Россия</a></div>
+              <div class="grag-b-text"><img src="img/russia.png" alt=""><a href="https://ru.m.wikipedia.org/wiki/Россия">Россия</a></div>
             </div>
-            <div class="abut-me-info"></div>
           </div>
         </div>
       </div>
