--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <script type="text/javascript" src="https://vk.com/js/api/share.js?93" charset="windows-1251"></script>
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -69,11 +70,30 @@
     </div>
      
     <div class="footer">
-      <a href="#"><img src="" alt=""></a>
-      <a href="#"><img src="" alt=""></a>
-      <a href="#"><img src="" alt=""></a>
+      <div class="footer-link">
+        <p class="footer-link-active">Главная</p>
+        <p>Образование</p>
+        <p>Мысли</p>
+        <p>Музыка</p>
+      </div>
+      <div class="footer-contact">
+        <a href="#"><img src="img/email-icon.png" alt="шо?"></a>
+        <a href="#"><img src="img/vk-icon.png" alt="шо? "></a>
+        <a href="#"><img src="img/email-icon.png" alt="img/email-icon.png"></a>
+      </div>
+      <div class="footer-info">
+        <div>info</div>
+        <div>phone number: +79518905166</div>
+        <div>Elabuga, Tatarstan, Russia 2021</div>
+        <script type="text/javascript">
+        document.write(VK.Share.button()); 
+        </script>
+      </div>
+      
+
     </div>
   </div>
+
   <script src="main.js"></script>
 </body>
 </html>
